# classedu2024-advctrl

./: README.md
homework/hw1/: .gitignore  README.md  prepare_for_submit.sh  pyproject.toml
homework/hw1/presets/initial_conditions/: cartpole_hold.yaml  cartpole_swingup.yaml
homework/hw1/presets/policy/: cartpole_pd.yaml
homework/hw1/src/: policy.py  system.py
homework/hw1/tex/: preamble.tex  readme.aux  readme.fdb_latexmk  readme.fls  readme.tex  style.cls
homework/hw1/tex/texbuild/: readme.aux  readme.fdb_latexmk  readme.fls
homework/hw2/: .gitignore  README.md  prepare_for_submit.sh  requirements.txt  test.py
homework/hw2/presets/initial_conditions/: cartpole_hold.yaml  cartpole_swingup.yaml  inv_pendulum.yaml
homework/hw2/presets/policy/: cartpole_energy_based.yaml  cartpole_energy_based_friction_adaptive.yaml
homework/hw2/presets/simulator/: casadi.yaml
homework/hw2/presets/system/: cartpole.yaml  cartpole_with_friction.yaml
homework/hw2/src/: policy.py  system.py
homework/hw2/tex/: readme.fdb_latexmk  readme.tex
homework/hw3/: .gitignore  README.md  prepare_for_submit.sh  test.py
homework/hw3/presets/: main.yaml
homework/hw3/presets/initial_conditions/: cartpole_hold.yaml  cartpole_swingup.yaml
homework/hw3/presets/policy/: cartpole_backstepping.yaml  cartpole_pd.yaml
homework/hw3/presets/simulator/: casadi.yaml
homework/hw3/src/: policy.py  system.py
homework/hw3/tex/: readme.tex
homework/hw4/: README.md  prepare_for_submit.sh  test.py
homework/hw4/src/: __init__.py  policy.py  system.py
homework/hw4/tex/: readme.tex
(+5 files in other folders)
